add ghpages deployment and contact section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
         </span>
         <a class="text-white font-light hover:text-cyan-400 transition-all duration-200 cursor-pointer py-1 mx-3" href="#about-me">About Me</a>
         <a class="text-white font-light hover:text-cyan-400 transition-all duration-200 cursor-pointer py-1 mx-3" href="#projects">Projects</a>
+        <a class="text-white font-light hover:text-cyan-400 transition-all duration-200 cursor-pointer py-1 mx-3" href="#contact">Contact</a>
     </header>
     <div class="h-8 w-full"></div> <!-- Spacing for sticky header -->
     <div>
@@ -104,6 +105,19 @@
                     </div>
                 </div>
 
+            </div>
+            <div class="flex-col w-1/12 sm:w-2/12"></div>
+        </div>
+        <div class="w-100 flex bg-white py-4">
+            <div class="flex-col w-1/12 sm:w-2/12"></div>
+            <div class="flex-col w-10/12 sm:w-8/12">
+                <h1 class="text-3xl text-black c-anchor font-thin mb-3" id="contact">Contact</h1>
+                <div>
+                    <a href="https://www.linkedin.com/in/ja-jet-loh/" target="_blank" class="text-cyan-600 hover:text-cyan-800 transition-all"><fa-icon [icon]="faLinkedIn" class="mr-2"></fa-icon>www.linkedin.com/in/ja-jet-loh/</a>
+                </div>
+                <div>
+                    <a href="https://github.com/jajetloh" target="_blank" class="text-cyan-600 hover:text-cyan-800 transition-all"><fa-icon [icon]="faGithub" class="mr-2"></fa-icon>github.com/jajetloh</a>
+                </div>
             </div>
             <div class="flex-col w-1/12 sm:w-2/12"></div>
         </div>
